# PDF

./: .gitignore  charm.yaml  pyproject.toml
src/: main.py
