[tool.poetry]
name = "saas-launchpad-lite"
version = "0.1.0"
description = "Lightweight AI Crew for converting ideas to MVP specs and skeletons."
authors = ["Rainy"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = "^0.85.0"
crewai-tools = "^0.14.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
# 這裡對應到 src/main.py 裡的 run_lite_crew 函數
start = "src.main:run_lite_crew"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
